[gd_scene load_steps=2 format=2]

[ext_resource path="res://code/networking/Lobby.gd" type="Script" id=1]

[node name="Node2D" type="Node2D"]

[node name="Lobby" type="Node2D" parent="."]

[node name="LobbyUi" type="CanvasLayer" parent="Lobby"]
script = ExtResource( 1 )

[node name="HostLobbyBtn" type="Button" parent="Lobby/LobbyUi"]
anchor_left = 0.4
anchor_top = 0.2
anchor_right = 0.6
anchor_bottom = 0.25
size_flags_horizontal = 2
size_flags_vertical = 2
text = "Host Lobby"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="JoinLobbyIp" type="TextEdit" parent="Lobby/LobbyUi"]
anchor_left = 0.4
anchor_top = 0.7
anchor_right = 0.6
anchor_bottom = 0.75
text = "127.0.0.1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="JoinLobbyBtn" type="Button" parent="Lobby/LobbyUi"]
anchor_left = 0.4
anchor_top = 0.75
anchor_right = 0.6
anchor_bottom = 0.8
size_flags_horizontal = 2
size_flags_vertical = 2
text = "Join Lobby"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Lobby/LobbyUi/HostLobbyBtn" to="Lobby/LobbyUi" method="_on_host_lobby_pressed"]
[connection signal="pressed" from="Lobby/LobbyUi/JoinLobbyBtn" to="Lobby/LobbyUi" method="_on_join_lobby_pressed"]
